fix: Width of brackets is too small when text is too long

--- a/themes/statusline/assets/sass/_bracket.scss
+++ b/themes/statusline/assets/sass/_bracket.scss
@@ -2,7 +2,7 @@
 	border-top: $border-size-thin solid $border-color;
 	border-bottom: $border-size-thin solid $border-color;
 	min-height: $base-font-size;
-	width: $border-size-thick * 1.5;
+	min-width: $border-size-thick * 1.5;
 }
 
 .bracket {
